--- a/style.css
+++ b/style.css
@@ -82,4 +82,13 @@ input{
     padding: 1rem;
     color: var(--blanco);
     text-transform: uppercase;
+    border-radius: 10px;
+}
+.correcto {
+    background-color: rgb(74, 185, 0);
+    text-align: center;
+    padding: 1rem;
+    color: var(--blanco);
+    text-transform: uppercase;
+    border-radius: 10px;
 }
